# Hackathon2-Todo-App

./: .gitignore  AUTHENTICATION_FIX_SUMMARY.md  README-PHASE4.md  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  todo_app.db
backend/: .dockerignore  AUTH_FIX_SUMMARY.md  BACKEND_FIXES_SUMMARY.md  CLAUDE.md  Dockerfile  README.md  TEST_RESULTS.md  __init__.py  auth_utils.py  check_database_schema.py  config.py  create_db.py  db.py  dependencies.py  fix_database_add_status.py  main.py  models.py  pyproject.toml  schemas.py  simple_auth_test.py  start.sh  test.db  test_all_fixes.py  test_api.py  test_auth_flow.py  test_auth_functionality.py  test_backend_endpoints.py  test_basic_auth.py  test_comprehensive_auth.py  test_create_task.py  test_db.py  test_documentation_health.py  test_endpoints.py  test_final_verification.py  test_full_flow.py  test_table_creation.py  test_task_crud.py  todo_app.db  todo_app.db.backup  view_all_tasks.py
backend/agents/: __init__.py  todo_agent.py
backend/database/: db.py
backend/mcp/: __init__.py  handlers.py  schemas.py  server.py  tools.py
backend/models_old/: models.py
backend/routers/: __init__.py  auth_router.py  bulk_operations.py  chat_router.py  filtered_tasks.py  import_export.py  notifications.py  profile.py  projects.py  settings.py  stats.py  tags.py  tasks.py  user_preferences.py  websocket.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_comprehensive_auth.py  test_tasks.py
backend/utils/: __init__.py  auth_middleware.py  auth_utils.py  case_converter.py  (+8 more)
(+488 files in other folders)
